--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,16 @@ matrix:
   include:
     - os: osx
       env:
-        - CXX=clang++ PATH=/usr/local/opt/llvm@9/bin:$PATH LLVM_DIR=/usr/local/opt/llvm@9 LDFLAGS:=-L/usr/local/opt/llvm@9/lib CPPFLAGS=-I/usr/local/opt/llvm@6/include
+        - CXX=clang++ PATH=/usr/local/opt/llvm@9/bin:$PATH LLVM_DIR=/usr/local/opt/llvm@9 LDFLAGS:=-L/usr/local/opt/llvm@9/lib CPPFLAGS=-I/usr/local/opt/llvm@9/include
         - CONFIG_ARGS="-DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++"
-      install: brew install llvm@9
+      install: brew install llvm@9 --with-clang
       cache:
         directories: ~/Library/Caches/Homebrew/
     - os: osx
       env:
         - CXX=clang++ PATH=/usr/local/opt/llvm@9/bin:$PATH LLVM_DIR=/usr/local/opt/llvm@9 LDFLAGS:=-L/usr/local/opt/llvm@9/lib CPPFLAGS=-I/usr/local/opt/llvm@9/include
         - CONFIG_ARGS="-DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++"
-      install: brew install llvm@9
+      install: brew install llvm@9 --with-clang
       cache:
         directories: ~/Library/Caches/Homebrew/
 env:
