--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,14 @@ matrix:
       env:
         - CXX=clang++ PATH=/usr/local/opt/llvm@9/bin:$PATH LLVM_DIR=/usr/local/opt/llvm@9 LDFLAGS:=-L/usr/local/opt/llvm@9/lib CPPFLAGS=-I/usr/local/opt/llvm@9/include
         - CONFIG_ARGS="-DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++"
-      install: brew install --with-clang llvm@9 
+      install: brew install --with-toolchain llvm@9 
       cache:
         directories: ~/Library/Caches/Homebrew/
     - os: osx
       env:
         - CXX=clang++ PATH=/usr/local/opt/llvm@9/bin:$PATH LLVM_DIR=/usr/local/opt/llvm@9 LDFLAGS:=-L/usr/local/opt/llvm@9/lib CPPFLAGS=-I/usr/local/opt/llvm@9/include
         - CONFIG_ARGS="-DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++"
-      install: brew install --with-clang llvm@9 
+      install: brew install --with-toolchain llvm@9 
       cache:
         directories: ~/Library/Caches/Homebrew/
 env:
